2001-02-13  Alex Graveley  <alex@ximian.com>

	* src/soup-core/soup-ssl.c (soup_ssl_add_watch): work around fact
	that data available in the socket does not always mean unencrypted
	data is available for reading.
	(soup_ssl_read_cb): called on socket data available. Only call the
	real callback if SSL_pending() returns > 0 meaning there is actual
	data to read. there is a bug here as SSL_pending() always returns
	false, so its commented out.

	* src/soup-core/soup-queue.c (soup_queue_connect): add explicit
	check for SOCKS protocol, remove call to soup_setup_socket.

	* src/soup-core/soup-context.c (soup_connection_get_iochannel):
	add channel member to SoupConnection, and serve it up for future
	requests.

	* src/soup-core/soup-queue.c (soup_setup_socket): removed.
	(soup_get_request_header): change default Content-Type to 
	"text/xml; charset=utf-8".

	* src/soup-core/soup-context.c (soup_connection_setup_socket):
	moved soup-queue.c:soup_setup_socket() to here. 

2001-02-12  alex  <alex@ximian.com>

	* src/soup-core/soup-server.[ch]: Initial revision of server side 
	  request handling dispatcher.

2001-02-11  alex  <alex@ximian.com>

	* TODO: add items left before a release.

	* soup-queue.c: change default Content-Type to "text/xml" from
	  "text/xml\r\n\tcharset=\"utf-8\"".

	* soup-serializer.[ch]: added soup_serializer_new_full which
	  removes unnecessary args to soup_serializer_start_envelope. 
	  rearrange namespace args to soup_serializer_start_element to match 
	  other methods. added soup_serializer_set_type to set the xsi:type,
	  and soup_serializer_set_null to set xsi:null="1".

2001-02-06  alex  <alex@ximian.com>

	* soup-config.in: remove some cruft.

	* soupConf.sh.in: remove some cruft.

	* src/soup-core/Makefile.am: build soup-headers.c

	* src/soup-core/soup-headers.[ch]: created. refactor of header parsing
	  logic for use in requests and responses.

	* src/soup-core/soup-message.c: free req->response_phrase as it is now 
	  allocated.
