@@ -408,7 +408,7 @@ soup_connection_get_iochannel (SoupConnection *conn)
 		conn->channel = gnet_tcp_socket_get_iochannel (conn->socket);
 
 		if (conn->context->protocol == SOUP_PROTOCOL_SHTTP)
-			conn->channel = soup_get_ssl_iochannel (conn->channel);
+			conn->channel = soup_ssl_get_iochannel (conn->channel);
 
 		soup_connection_setup_socket (conn->channel);
 	} else
